<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Match.Width"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingBottom="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/click_one_minute_finish_app"
        style="@style/Match.Width"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground">

        <CheckBox
            android:id="@+id/check_one_minute_finish_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/one_minute"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/click_two_minute_finish_app"
        style="@style/Match.Width"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground">

        <CheckBox
            android:id="@+id/check_two_minute_finish_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/two_minute"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/click_five_minute_finish_app"
        style="@style/Match.Width"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground">

        <CheckBox
            android:id="@+id/check_five_minute_finish_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/five_minute"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>